# summit_mico

./: readme.md
mico_description/: CMakeLists.txt  package.xml
mico_description/launch/: display_kinova_robot.launch~  display_mico_robot.launch  display_mico_robot.launch~
mico_description/rviz/: mico_urdf.rviz
mico_description/urdf/: j2n7_modified.xacro  kinova.gazebo  kinova.gazebo~  kinova_common.xacro  kinova_common.xacro~  kinova_finger_set.xacro  kinova_finger_set.xacro~  kinova_inertial.xacro  m1n6s200.xacro~  mico2fingers.xacro  mico2fingers.xacro~  mico2fingers_root.xacro  mico_standalone.xacro  micoproperties.xacro
summit_description/: CMakeLists.txt  package.xml
summit_description/launch/: summit_xl_hl_diff_rviz.launch  summit_xl_hl_diff_rviz.launch~  summit_xl_hl_omni_rviz.launch  summit_xl_hl_omni_rviz.launch~
summit_description/meshes/aluminium_channel/: model.stl
summit_description/meshes/mini_pc/STL/: miniPCmaterials.stl
summit_description/robots/: summit_xl_hl_csl.urdf.xacro  summit_xl_hl_diff.urdf.xacro  summit_xl_hl_diff.urdf.xacro~  summit_xl_hl_omni.urdf.xacro  summit_xl_hl_omni.urdf.xacro~  summit_xl_hl_root.urdf.xacro
summit_description/rviz/: summit_urdf.rviz
summit_description/urdf/bases/: summit_xl_base.gazebo.xacro  summit_xl_base.urdf.xacro  summit_xl_hl_base.urdf.xacro
summit_description/urdf/structures/: structure_hokuyo.urdf.xacro  structure_hokuyo_ust.urdf.xacro  structure_ptz_rgbd_gps.urdf.xacro
summit_description/urdf/wheels/: omni_wheel.urdf.xacro  rubber_wheel.urdf.xacro
summit_mico/: CMakeLists.txt  package.xml  package.xml~
summit_mico_control/: CMakeLists.txt  package.xml  package.xml~  summit_mico_controllers_plugins.xml
summit_mico_control/config/: cooperative_mico_gazebo_control.yaml  cooperative_summit_gazebo_control.yaml  mico_gazebo_control.yaml  mico_gazebo_control.yaml~  publish_seperate_joint_states.yaml  summit_gazebo_control.yaml  summit_mico_gazebo_control.yaml  summit_mico_gazebo_control.yaml~
summit_mico_control/config/backup/: summit_gazebo_control.yaml
summit_mico_control/include/summit_mico_control/: platform_state_controller.hpp
summit_mico_control/launch/: publish_seperate_joint_states.launch  summit_mico_cooperative_control.launch  summit_mico_gazeb_control.launch~  summit_mico_gazebo_control.launch  summit_mico_gazebo_control.launch~  summit_mico_omni_gazebo_control.launch
summit_mico_control/scripts/: force_torque_senosr_filter.py  mico_home.py~  mico_position_home.py  mico_position_home.py~  mico_trajectory_home.py
summit_mico_control/src/: platform_state_controller.cpp  pub_seperate_joint_state.cpp
summit_mico_description/: CMakeLists.txt  package.xml
summit_mico_description/launch/: summit_xl_hl_diff_mico_rviz.launch  summit_xl_hl_diff_mico_rviz.launch~  summit_xl_hl_omni_mico_rviz.launch
summit_mico_description/meshes/objects/: bumper_holder.stl  plate.stl
summit_mico_description/robots/: summit_mico_cooperative_root.urdf.xacro  summit_mico_csl.urdf.xacro  summit_mico_diff.urdf  summit_mico_root.xacro  summit_xl_hl_diff_mico.urdf.xacro  summit_xl_hl_diff_mico.urdf.xacro~  summit_xl_hl_ext_mico.urdf.xacro  summit_xl_hl_ext_mico.urdf.xacro~  summit_xl_hl_omni_mico.urdf.xacro  summit_xl_hl_omni_mico.urdf.xacro~
summit_mico_description/rviz/: summit_mico.rviz
summit_mico_gazebo/: CMakeLists.txt  impedancePlotJugglerDebug.xml  package.xml  plotJuglerDebug.xml
summit_mico_gazebo/launch/: cooperative.launch  cooperative_robot_properties.yaml  mico_gazebo.launch  mico_spawn.launch  robot_launch.launch~  summit_gazebo.launch  summit_mico_diff.launch  summit_mico_diff.launch~  summit_mico_gazebo.launch  summit_mico_omni.launch  summit_mico_spawn.launch  summit_spawn.launch
summit_mico_gazebo/worlds/: summit_mico_empty.world  summit_mico_office.world
summit_mico_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
summit_mico_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  summit_xl_hl_mico.srdf  summit_xl_mico.srdf  summit_xl_mico.srdf~
summit_mico_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  summit_xl_hl_mico_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
