<?xml version="1.0"?>
<package>
  <name>summit_mico_description</name>
  <version>1.0.10</version>
  <description> URDF description of the Summit-Mico Mobile Manipulator versions </description>
  <maintainer email="logothm@gmail.com">Michalis Logothetis</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>
  
</package>



